--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -6,7 +6,7 @@
   </mat-form-field>
   <mat-form-field>
     <mat-label>Nombre</mat-label>
-    <input type="password" matInput placeholder="Contraseña">
+    <input type="password" matInput placeholder="Nombre de la persona">
   </mat-form-field>
   <mat-form-field>
     <mat-label>Contraseña</mat-label>
