--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -9,7 +9,14 @@
     </mat-toolbar>
 
     <mat-nav-list>
-      <mat-list-item></mat-list-item>
+      <mat-list-item
+        *ngFor="let item of sidebarItems"
+        [routerLink]="item.url"
+        (click)="sidenav.toggle()"
+      >
+        <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
+        {{ item.label }}
+      </mat-list-item>
     </mat-nav-list>
 
   </mat-sidenav>
@@ -21,7 +28,6 @@
     <button mat-button>
       Logout
     </button>
-
   </mat-toolbar>
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 </mat-sidenav-container>
